syntax = "proto3";

import "protos/keyboard.proto";
import "protos/memory.proto";
import "protos/processor.proto";
import "protos/screen.proto";
import "protos/storage.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/manh737/go-grpc/protos";

package protos;

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  repeated GPU gpus = 5;
  Memory memory = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double kg_weight = 10;
    double lb_weight = 11;
  }
  double price_usd = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message CreateLaptopRequest { Laptop laptop = 1; }

message CreateLaptopResponse { Laptop laptop = 1; }

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse);
}